Modified tools to allow fetching any player's data. Minor directory restructuring.

--- a/player_data_tools/stats_cleanup.ipynb
+++ b/player_data_tools/stats_cleanup.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "### Games data cleanup\n",
     "\n",
-    "This notebook cleans up the games.json file in preparation for use in a Pandas dataframe."
+    "This notebook performs some cleanup operations on the raw stats dump obtained from running `stats_dump.ipynb`, geared toward use in a later statistics/data science application.\n",
+    "\n",
+    "Not all cleanup operations here are universal. You may with to check them individually and modify them to suit your own needs."
    ]
   },
   {
@@ -24,13 +26,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "447ba9cb-6cd0-4abc-9304-787e807a2fa6",
+   "metadata": {},
+   "source": [
+    "Replace the following `player_id` number with the one whose game data you wish to clean."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "871541b9-3115-4e24-9ce7-88232b4a7b5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "player_id = dummy_id"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7fb2e328-c61e-45d5-956d-f0720effc4d7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_json('raw_stats.json')"
+    "df = pd.read_json('./output/'+str(player_id)+'/datasets/raw_stats.json')"
    ]
   },
   {
@@ -38,13 +58,13 @@
    "id": "e75be7f4-e9e7-4c65-8d39-4db2ee7137ce",
    "metadata": {},
    "source": [
-    "This cell drops annulled games and some columns that I considered irrelevant for my personal analysis. You should customize this to your own purposes - for instance, I do not play tournaments, so I dropped these columns."
+    "This cell drops various rows and columns. It is not intended to be universally applicable. You should check which rows/columns are dropped and customize this cell to your particular needs."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "781a54c7-35a9-457a-a023-2bd10b824e77",
+   "id": "956279cd-8bce-4a9c-87a9-0585661181e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,16 +73,21 @@
     "df.drop(['annulled'], axis = 1, inplace = True)\n",
     "df.reset_index(drop = True, inplace = True)\n",
     "\n",
-    "# Convert [width, height] information to single column (assuming you only play square board sizes)\n",
+    "# Convert [width, height] information to single column (assuming you only only care about square board sizes)\n",
     "df.drop(['width'], axis = 1, inplace = True)\n",
-    "df = df.rename(columns = {\"height\":\"size\"})\n",
+    "df = df.rename(columns = {'height':'size'})\n",
     "\n",
-    "# Define irrelevant columns - customize this according to individual need\n",
-    "deprecated = ['black_player_rating', 'white_player_rating', 'black_player_rank', 'white_player_rank'] # these are from before the pre-2017 Glicko adoption\n",
-    "rengo = ['rengo', 'rengo_black_team', 'rengo_white_team', 'rengo_casual_mode'] # keep these if you want to keep rengo info\n",
+    "# Define irrelevant columns - customize these according to individual need\n",
+    "\n",
     "game_metadata = ['players', 'name', 'sgf_filename', 'flags', 'creator', 'source', 'mode']\n",
-    "tournament = ['tournament', 'tournament_round', 'ladder'] # keep these if you want to keep tournament info\n",
-    "correspondence = ['pause_on_weekends'] # keep this if you play correspondence with this setting and think it's relevant\n",
+    "# these are from before the pre-2017 Glicko adoption\n",
+    "deprecated = ['black_player_rating', 'white_player_rating', 'black_player_rank', 'white_player_rank']\n",
+    "# keep these if you want to keep rengo info\n",
+    "rengo = ['rengo', 'rengo_black_team', 'rengo_white_team', 'rengo_casual_mode']\n",
+    "# keep these if you want to keep tournament info\n",
+    "tournament = ['tournament', 'tournament_round', 'ladder']\n",
+    "# keep this if you play correspondence with this setting and think it's relevant\n",
+    "correspondence = ['pause_on_weekends']\n",
     "\n",
     "# Drop above columns\n",
     "df.drop(deprecated, axis = 1, inplace = True)\n",
@@ -77,7 +102,7 @@
    "id": "ac7f4fab-5376-4996-ae90-385f810885e0",
    "metadata": {},
    "source": [
-    "This cell reorganizes the dataframe in terms of a me-vs-opponent perspective rather than a black-vs-white perspective. For instance, instead of `{\"black\":\"my_id\", \"white\":\"opponent_id\"}`, we have `{\"my_color\":\"black\"}`. This is applied to:\n",
+    "This cell reorganizes the dataframe in terms of a player-vs-opponent perspective rather than a black-vs-white perspective. For instance, instead of `{'black':'player_id', 'white':'opponent_id'}`, we have `{'player_color':'black'}`. This is applied to:\n",
     "* player colors\n",
     "* player IDs\n",
     "* game results"
@@ -90,24 +115,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "myID =  511491\n",
-    "playedBlack = df.index[df['black'] == myID].tolist()\n",
-    "playedWhite = df.index[df['white'] == myID].tolist()\n",
+    "playedBlack = df.index[df['black'] == player_id].tolist()\n",
+    "playedWhite = df.index[df['white'] == player_id].tolist()\n",
     "\n",
-    "my_color = ['white'] * df.shape[0]\n",
+    "player_color = ['white'] * df.shape[0]\n",
     "opponent_id = df.get('black')\n",
-    "won = [False] * df.shape[0]\n",
+    "player_won = [False] * df.shape[0]\n",
     "\n",
-    "df.insert(3, 'my_color', my_color)\n",
-    "df.insert(4, 'opponent_id', won)\n",
-    "df.insert(5, 'won', won)\n",
-    "df.loc[playedBlack, 'my_color'] = 'black'\n",
+    "df.insert(3, 'player_color', player_color)\n",
+    "df.insert(4, 'opponent_id', player_won)\n",
+    "df.insert(5, 'player_won', player_won)\n",
+    "df.loc[playedBlack, 'player_color'] = 'black'\n",
     "df.loc[playedBlack, 'opponent_id'] = df.loc[playedBlack, 'white']\n",
     "df.loc[playedWhite, 'opponent_id'] = df.loc[playedWhite, 'black']\n",
     "df.drop(['black', 'white'], axis = 1, inplace = True)\n",
     "\n",
-    "df.loc[playedBlack, 'won'] = df.loc[playedBlack, 'white_lost'] \n",
-    "df.loc[playedWhite, 'won'] = df.loc[playedWhite, 'black_lost']\n",
+    "df.loc[playedBlack, 'player_won'] = df.loc[playedBlack, 'white_lost'] \n",
+    "df.loc[playedWhite, 'player_won'] = df.loc[playedWhite, 'black_lost']\n",
     "df.drop(['black_lost', 'white_lost'], axis = 1, inplace = True)"
    ]
   },
@@ -150,8 +174,7 @@
     "parser.parse(df['started'][0])\n",
     "game_length = [divmod((parser.parse(df['ended'][i]) - parser.parse(df['started'][i])).seconds, 60)[0] for i in range(df.shape[0])]\n",
     "df.insert(0, 'game_length', game_length)\n",
-    "df.drop(['ended'], axis = 1, inplace = True)\n",
-    "df.head()"
+    "df.drop(['ended'], axis = 1, inplace = True)"
    ]
   },
   {
@@ -169,7 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Extract historical ratings data and store in ['my_rating', 'my_deviation', 'my_volatility',\n",
+    "# Extract historical ratings data and store in ['player_rating', 'player_deviation', 'player_volatility',\n",
     "#                                               'opp_rating', 'opp_deviation', 'opp_volatility']\n",
     "black_rating = pd.DataFrame([df['historical_ratings'][i]['black']['ratings']['overall']['rating'] \n",
     "                             for i in range(df.shape[0])], columns = ['black_rating'])\n",
@@ -181,18 +204,18 @@
     "white_deviation = [df['historical_ratings'][i]['white']['ratings']['overall']['deviation'] for i in range(df.shape[0])]\n",
     "white_volatility = [df['historical_ratings'][i]['white']['ratings']['overall']['volatility'] for i in range(df.shape[0])]\n",
     "\n",
-    "df.insert(0, 'my_rating', white_rating)\n",
+    "df.insert(0, 'player_rating', white_rating)\n",
     "df.insert(0, 'opponent_rating', white_rating)\n",
-    "df.insert(0, 'my_deviation', white_deviation)\n",
+    "df.insert(0, 'player_deviation', white_deviation)\n",
     "df.insert(0, 'opponent_deviation', white_deviation)\n",
-    "df.insert(0, 'my_volatility', white_volatility)\n",
+    "df.insert(0, 'player_volatility', white_volatility)\n",
     "df.insert(0, 'opponent_volatility', white_volatility)\n",
     "\n",
-    "df.loc[playedBlack, 'my_rating'] = black_rating.loc[playedBlack, 'black_rating']\n",
+    "df.loc[playedBlack, 'player_rating'] = black_rating.loc[playedBlack, 'black_rating']\n",
     "df.loc[playedWhite, 'opponent_rating'] = black_rating.loc[playedWhite, 'black_rating']\n",
-    "df.loc[playedBlack, 'my_deviation'] = black_deviation.loc[playedBlack, 'black_deviation']\n",
+    "df.loc[playedBlack, 'player_deviation'] = black_deviation.loc[playedBlack, 'black_deviation']\n",
     "df.loc[playedWhite, 'opponent_deviation'] = black_deviation.loc[playedWhite, 'black_deviation']\n",
-    "df.loc[playedBlack, 'my_volatility'] = black_volatility.loc[playedBlack, 'black_volatility']\n",
+    "df.loc[playedBlack, 'player_volatility'] = black_volatility.loc[playedBlack, 'black_volatility']\n",
     "df.loc[playedWhite, 'opponent_volatility'] = black_volatility.loc[playedWhite, 'black_volatility']\n",
     "\n",
     "df.drop(['historical_ratings'], axis = 1, inplace = True)"
@@ -213,7 +236,7 @@
     "6. Time information\n",
     "7. Player rank information\n",
     "\n",
-    "It then sorts the dataframe by game start time (descending order). (At this point the start times are converted from `str` to `datetime` objects.)"
+    "It then sorts the dataframe by game start time (descending order). The start times are converted from `str` to `datetime` objects."
    ]
   },
   {
@@ -225,11 +248,11 @@
    "source": [
     "cols = ['started',\n",
     "        'id', 'ranked',\n",
-    "        'opponent_id', 'my_color',\n",
-    "        'won', 'outcome',\n",
+    "        'opponent_id', 'player_color',\n",
+    "        'player_won', 'outcome',\n",
     "        'size', 'rules', 'handicap', 'komi', 'disable_analysis',\n",
     "        'time_control', 'time_per_move', 'game_length',\n",
-    "        'my_rating', 'opponent_rating', 'my_deviation', 'opponent_deviation', 'my_volatility', 'opponent_volatility',\n",
+    "        'player_rating', 'opponent_rating', 'player_deviation', 'opponent_deviation', 'player_volatility', 'opponent_volatility',\n",
     "        'related']\n",
     "df = df[cols]\n",
     "df['started'] = pd.to_datetime(df['started']).values\n",
@@ -262,7 +285,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_json(r'clean_stats.json')"
+    "df.to_json(r'./output/'+str(player_id)+'/datasets/clean_stats.json')"
    ]
   }
  ],
