--- a/player_data_tools/games_dump.ipynb
+++ b/player_data_tools/games_dump.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "player_id = 1024823\n",
+    "player_id = dummy_id\n",
     "dataset = 'clean_stats.json'"
    ]
   },
