--- a/player_data_tools/games_dump.ipynb
+++ b/player_data_tools/games_dump.ipynb
@@ -133,7 +133,7 @@
    "id": "904a51af-5b8f-41c1-98fa-d0ddb31a66f1",
    "metadata": {},
    "source": [
-    "This cell uses [ogstosgf](https://github.com/lightvector/ogstosgf) to convert each game to SGF format, then moves the SGFs to an output directory `./ogssgf`."
+    "This cell uses [ogstosgf](https://github.com/lightvector/ogstosgf) to convert each game to SGF format, then moves the SGFs to an output directory."
    ]
   },
   {
