Implemented caching, progress bar on API calls.

--- a/player_data_tools/games_dump.ipynb
+++ b/player_data_tools/games_dump.ipynb
@@ -20,12 +20,14 @@
    "outputs": [],
    "source": [
     "import requests\n",
+    "import requests_cache\n",
     "import json\n",
     "import time\n",
     "import random\n",
     "import pandas as pd\n",
     "import os\n",
-    "from sys import exit"
+    "from sys import exit\n",
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -55,6 +57,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "try:\n",
+    "    os.mkdir('cache')\n",
+    "except FileExistsError:\n",
+    "    pass\n",
+    "requests_cache.install_cache('cache/games_dump_cache', expire_after=3600)\n",
+    "\n",
     "# Obtain API authorization keys\n",
     "with open('keys.txt', 'r') as f:\n",
     "    lines = f.readlines()\n",
@@ -97,14 +105,13 @@
     "max_attempts = 10\n",
     "games_fetched = 0\n",
     "\n",
-    "for x in gamesList:\n",
+    "for x in tqdm(gamesList):\n",
     "    endpoint = 'https://online-go.com/api/v1/games/' + x[14:]\n",
     "    response = s.get(endpoint,  headers = headers)\n",
     "    while response.status_code == 429: # If rate limited, wait and then start again\n",
-    "        print('Rate limit reached. Backing off before retrying query. Please wait...')\n",
     "        attempts += 1\n",
     "        if attempts >= max_attempts:\n",
-    "            print('Too many attempts.')\n",
+    "            print('Rate limited, too many attempts.')\n",
     "            break\n",
     "        else:\n",
     "            time.sleep((2 ** attempts) + random.random())\n",
